updating agresti edition

--- a/references.bib
+++ b/references.bib
@@ -1,8 +1,8 @@
 @book{agresti2012categorical,
   title={Categorical data analysis},
   author={Agresti, Alan},
-  volume={792},
-  year={2012},
+  edition={3},
+  year={2013},
   publisher={John Wiley \& Sons},
   url={https://onlinelibrary.wiley.com/doi/book/10.1002/0471249688}
 }
