updating hypergeom sampling notes

--- a/references.bib
+++ b/references.bib
@@ -6,3 +6,10 @@
   publisher={John Wiley \& Sons},
   url={https://onlinelibrary.wiley.com/doi/book/10.1002/0471249688}
 }
+
+@book{blitzstein2019introduction,
+  title={Introduction to Probability},
+  author={Blitzstein, Joseph K and Hwang, Jessica},
+  year={2019},
+  publisher={CRC Press}
+}
