--- a/assignments/hw0/hw0.ipynb
+++ b/assignments/hw0/hw0.ipynb
@@ -941,15 +941,13 @@
     "\n",
     "**Formatting:** check that your code does not exceed 80 characters in line width. You can set _Tools &rarr; Settings &rarr; Editor &rarr; Vertical ruler column_ to 80 to see when you've exceeded the limit.\n",
     "\n",
-    "Download your notebook in .ipynb format and use the following commands to convert it to PDF.  Then run the following command to convert to a PDF:\n",
-    "```\n",
-    "jupyter nbconvert --to pdf <yourlastname>_hw1.ipynb\n",
-    "```\n",
-    "(Note that for the above code to work, you need to rename your file `<yourlastname>_hw1.ipynb`)\n",
+    "**Converting to PDF** The simplest way to convert to PDF is to use the \"Print to PDF\" option in your browser. Just make sure that your code and plots aren't cut off, as it may not wrap lines.\n",
     "\n",
-    "Getting this HW into PDF form isn't meant to be a burden. One quick and easy approach is to open it as a Jupyter notebook, print, save to pdf. Just make sure your plots and code aren't cut off so we can grade them.\n",
-    "\n",
-    "Please post on Ed or come to OH if there are any other problems submitting the HW.\n",
+    "**Alternatively** You can download your notebook in .ipynb format and use the following commands to convert it to PDF.  Then run the following command to convert to a PDF:\n",
+    "```\n",
+    "jupyter nbconvert --to pdf <yourlastname>_hw<number>.ipynb\n",
+    "```\n",
+    "(Note that for the above code to work, you need to rename your file `<yourlastname>_hw<number>.ipynb`)\n",
     "\n",
     "**Installing nbconvert:**\n",
     "\n",
@@ -958,7 +956,9 @@
     "conda install -c anaconda nbconvert\n",
     "```\n",
     "\n",
-    "**Upload** your .pdf file to Gradescope. Please tag your questions correctly! I.E., for each question, all of and only the relevant sections are tagged."
+    "**Upload** your .pdf file to Gradescope. Please tag your questions correctly! I.E., for each question, all of and only the relevant sections are tagged.\n",
+    "\n",
+    "Please post on Ed or come to OH if there are any other problems submitting the HW."
    ]
   }
  ],
