adding football example

--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,14 @@
   year={2019},
   publisher={CRC Press}
 }
+
+@article{mckee2023neuropathologic,
+  title={Neuropathologic and clinical findings in young contact sport athletes exposed to repetitive head impacts},
+  author={McKee, Ann C and Mez, Jesse and Abdolmohammadi, Bobak and Butler, Morgane and Huber, Bertrand Russell and Uretsky, Madeline and Babcock, Katharine and Cherry, Jonathan D and Alvarez, Victor E and Martin, Brett and others},
+  journal={JAMA neurology},
+  volume={80},
+  number={10},
+  pages={1037--1050},
+  year={2023},
+  publisher={American Medical Association}
+}
