clarified prototyping in hw0, problem 5.3.5

--- a/assignments/hw0/hw0.ipynb
+++ b/assignments/hw0/hw0.ipynb
@@ -902,7 +902,9 @@
    "source": [
     "#### Problem 5.3.5: timing\n",
     "\n",
-    "Often want your code to run quickly when you are prototyping. How might you modify the above code snippet to run faster when you are just prototyping? Confirm that your approach is fater by using `%%time`. Report your findings."
+    "Often want your code to run quickly when you are prototyping. How might you modify the above code snippet to run faster when you are just prototyping? Note that because you are \"prototyping,\" your \"quick-and-dirty\" solution doesn't need to satisfy the asserts you set up in Problem 5.3.1. \n",
+    "\n",
+    "But, **DO** confirm that your approach is fater by using `%%time`. Report your findings."
    ]
   },
   {
