adding readings for the first half of the course

--- a/references.bib
+++ b/references.bib
@@ -24,3 +24,45 @@
   year={2023},
   publisher={American Medical Association}
 }
+
+@article{albert1993bayesian,
+  title={Bayesian analysis of binary and polychotomous response data},
+  author={Albert, James H and Chib, Siddhartha},
+  journal={Journal of the American statistical Association},
+  pages={669--679},
+  year={1993},
+  publisher={JSTOR}
+}
+
+@article{polson2013bayesian,
+  title={Bayesian inference for logistic models using P{\'o}lya--Gamma latent variables},
+  author={Polson, Nicholas G and Scott, James G and Windle, Jesse},
+  journal={Journal of the American statistical Association},
+  volume={108},
+  number={504},
+  pages={1339--1349},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{friedman2010regularization,
+  title={Regularization paths for generalized linear models via coordinate descent},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Rob},
+  journal={Journal of statistical software},
+  volume={33},
+  number={1},
+  pages={1},
+  year={2010},
+  publisher={NIH Public Access}
+}
+
+@article{lee2014proximal,
+  title={Proximal {N}ewton-type methods for minimizing composite functions},
+  author={Lee, Jason D and Sun, Yuekai and Saunders, Michael A},
+  journal={SIAM Journal on Optimization},
+  volume={24},
+  number={3},
+  pages={1420--1443},
+  year={2014},
+  publisher={SIAM}
+}
