adding preprocessing question

--- a/assignments/hw1/hw1.ipynb
+++ b/assignments/hw1/hw1.ipynb
@@ -658,6 +658,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 0: Preprocessing\n",
+    "\n",
+    "Preprocess the data to drop games with nan scores, construct the covariate matrix $X$, construct the response vector $y$, and do any other preprocessing you find useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "ZjUJOkAWHWD0"
    },
