--- a/references.bib
+++ b/references.bib
@@ -66,3 +66,10 @@
   year={2014},
   publisher={SIAM}
 }
+
+@book{boyd2004convex,
+  title={Convex Optimization},
+  author={Boyd, Stephen P and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
