adding notes for lecture 4

--- a/references.bib
+++ b/references.bib
@@ -73,3 +73,14 @@
   year={2004},
   publisher={Cambridge university press}
 }
+
+@article{wainwright2008graphical,
+  title={Graphical models, exponential families, and variational inference},
+  author={Wainwright, Martin J and Jordan, Michael I},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={1},
+  number={1--2},
+  pages={1--305},
+  year={2008},
+  publisher={Now Publishers, Inc.}
+}
