--- a/_sources/lectures/01_distributions.ipynb
+++ b/_sources/lectures/01_distributions.ipynb
@@ -379,7 +379,7 @@
     "&= \\frac{\\theta}{\\theta^2} + \\frac{1- \\theta}{(1-\\theta)^2} \\\\\n",
     "&= \\frac{1}{\\theta (1 - \\theta)}.\n",
     "\\end{align*}\n",
-    "Interestingly, the inverse Fisher information is the $\\Var[X; \\theta]$. We'll revisit this point later in the course. \n",
+    "Interestingly, the inverse Fisher information is the $\\Var[X; \\theta]$. We'll revisit this point when we discuss exponential family distributions. \n",
     ":::\n"
    ]
   },
