--- a/references.bib
+++ b/references.bib
@@ -84,3 +84,10 @@
   year={2008},
   publisher={Now Publishers, Inc.}
 }
+
+@book{efron2022exponential,
+  title={Exponential families in theory and practice},
+  author={Efron, Bradley},
+  year={2022},
+  publisher={Cambridge University Press}
+}
