--- a/references.bib
+++ b/references.bib
@@ -91,3 +91,10 @@
   year={2022},
   publisher={Cambridge University Press}
 }
+
+@book{gelman1995bayesian,
+  title={Bayesian Data Analysis},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Vehtari, Aki and Rubin, Donald B},
+  year={1995},
+  publisher={Chapman and Hall/CRC}
+}
