--- a/references.bib
+++ b/references.bib
@@ -35,7 +35,7 @@
 }
 
 @article{polson2013bayesian,
-  title={Bayesian inference for logistic models using P{\'o}lya--Gamma latent variables},
+  title={Bayesian inference for logistic models using {P}{\'o}lya--gamma latent variables},
   author={Polson, Nicholas G and Scott, James G and Windle, Jesse},
   journal={Journal of the American statistical Association},
   volume={108},
@@ -97,4 +97,21 @@
   author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Vehtari, Aki and Rubin, Donald B},
   year={1995},
   publisher={Chapman and Hall/CRC}
+}
+
+@article{windle2014sampling,
+  title={Sampling P{\'o}lya-gamma random variates: alternate and approximate techniques},
+  author={Windle, Jesse and Polson, Nicholas G and Scott, James G},
+  journal={arXiv preprint arXiv:1405.0506},
+  year={2014}
+}
+
+@article{blei2014build,
+  title={Build, compute, critique, repeat: {D}ata analysis with latent variable models},
+  author={Blei, David M},
+  journal={Annual Review of Statistics and Its Application},
+  volume={1},
+  pages={203--232},
+  year={2014},
+  publisher={Annual Reviews}
 }
