updating data links

--- a/assignments/hw2/hw2.ipynb
+++ b/assignments/hw2/hw2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -271,13 +271,13 @@
        "[63211 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "votes = pd.read_csv(\"votes.csv\")\n",
+    "votes = pd.read_csv(\"https://raw.githubusercontent.com/slinderman/stats305b/winter2024/assignments/hw2/votes.csv\")\n",
     "votes.fips = votes.fips.apply(lambda x: str(int(x)).zfill(5))\n",
     "votes"
    ]
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -666,13 +666,13 @@
        "[3111 rows x 39 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "demo = pd.read_csv(\"demographics.csv\")\n",
+    "demo = pd.read_csv(\"https://raw.githubusercontent.com/slinderman/stats305b/winter2024/assignments/hw2/demographics.csv\")\n",
     "demo.fips = demo.fips.apply(lambda x: str(int(x)).zfill(5))\n",
     "demo"
    ]
