--- a/assignments/hw2/hw2.ipynb
+++ b/assignments/hw2/hw2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# HW2: Bayesian GLMs\n",
     "\n",
-    "In this assignment, you will develop Bayesian inference algorithms for generalized linear (mixed) models (GL(M)Ms). We'll put down football and focus on another timely subject: US presidential elections. We have downloaded data from the [MIT Election Data Science Lab](https://electionlab.mit.edu/data) consisting of presidential votes for each county in the US from 2000-2020. We have also downloaded demographic covariates from 2018 for each county. In this assignment, you will develop models to predict county-level votes given demographic data. "
+    "In this assignment, you will develop Bayesian inference algorithms for generalized linear (mixed) models (GL(M)Ms). We'll put football aside and focus on another timely subject: US presidential elections. We have downloaded data from the [MIT Election Data Science Lab](https://electionlab.mit.edu/data) consisting of presidential votes for each county in the US from 2000-2020. We have also downloaded demographic covariates from 2018 for each county. In this assignment, you will develop models to predict county-level votes given demographic data. "
    ]
   },
   {
