--- a/assignments/hw2/hw2.ipynb
+++ b/assignments/hw2/hw2.ipynb
@@ -48,6 +48,7 @@
     "import plotly.express as px\n",
     "\n",
     "from fastprogress import progress_bar\n",
+    "from IPython.display import Image\n",
     "from jaxtyping import Float, Array\n",
     "from urllib.request import urlopen\n",
     "from torch.distributions import Binomial, Gamma, MultivariateNormal, Normal"
