--- a/_sources/assignments/hw2/hw2.ipynb
+++ b/_sources/assignments/hw2/hw2.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install jaxtyping"
+    "!pip install jaxtyping\n",
+    "!pip install kaleido"
    ]
   },
   {
