--- a/assignments/hw2/hw2.ipynb
+++ b/assignments/hw2/hw2.ipynb
@@ -1049,8 +1049,9 @@
     "Using the posterior mean of $\\beta$ approximated with samples of your Markov chain, compute the deviance residuals between the observed vote counts and the expected counts.\n",
     "\n",
     "1. **Plot:** a histogram of the deviance residuals (across all years and counties). \n",
-    "2. **Discuss:** Do the deviance residuals look marginally distributed like a standard normal? If not, discuss why that could be the case.\n",
-    "3. **Plot:** a scatter plot of deviance residuals for all pairs of election years (you should organize the subplots in a grid). Do you see correlations in the residuals across years? \n"
+    "2. **Plot:** a scatter plot of deviance residuals for all pairs of election years (you should organize the subplots in a grid). Do you see correlations in the residuals across years? \n",
+    "3. **Discuss:** Do the deviance residuals look as exoected? If not, discuss why that could be the case.\n",
+    "\n"
    ]
   },
   {
@@ -1142,13 +1143,6 @@
     "### Problem 3f\n",
     "\n",
     "Visualize the last MCMC sample of the latent variables $z$ using the `plot_counties` function. Likewise, plot the last sample of the random effects $\\gamma$. Can you spectulate what type of unmodeled feature this latent variable is capturing?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Looks like rust belt is getting more red and the coastal elites are getting more blue!"
    ]
   },
   {
