--- a/_sources/assignments/hw2/hw2.ipynb
+++ b/_sources/assignments/hw2/hw2.ipynb
@@ -1037,7 +1037,7 @@
     "1. Write the binomial pmf, $\\mathrm{Bin}(y; N, \\pi)$, in exponential family form. \n",
     "2. Derive a closed form expression for the KL divergence between two binomial distributions (with the same total count $N$ but different probabilities $\\pi$) in terms of the natural parameters.\n",
     "3. Write the KL divergence in terms of the mean parameters.\n",
-    "4. Derive a closed form expression for the deviance residuals between a observed value $y$ and a a predicted value $\\hat{y} = N \\pi$ in terms of the mean parameters."
+    "4. Derive a closed form expression for the deviance residuals between a observed value $y$ and a predicted value $\\hat{y} = N \\pi$ in terms of the mean parameters."
    ]
   },
   {
