--- a/references.bib
+++ b/references.bib
@@ -116,13 +116,9 @@
   publisher={Annual Reviews}
 }
 
-@article{friedman2010regularization,
-  title={Regularization paths for generalized linear models via coordinate descent},
-  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Rob},
-  journal={Journal of statistical software},
-  volume={33},
-  number={1},
-  pages={1},
-  year={2010},
-  publisher={NIH Public Access}
+@book{bishop2006pattern,
+  title={Pattern Recognition and Machine Learning},
+  author={Bishop, Christopher},
+  year={2006},
+  publisher={Springer},
 }
