minor tweaks to hw3 language

--- a/assignments/hw3/hw3.ipynb
+++ b/assignments/hw3/hw3.ipynb
@@ -6,14 +6,10 @@
    "source": [
     "# HW3: Hidden Markov Models\n",
     "\n",
-    "This assignment considers the problem of classifying sleep states based on noisy heart rate sensor data, like what you might obtain from an Apple Watch. \n",
-    "We will work with a synthetic dataset modeled after a sleep study by Walch et al (2019). \n",
-    "We found it too difficult to make accurate predictions on their real data, so we simulated synthetic data with which you should be able to detect sleep states more reliably.\n",
-    "\n",
-    "Sleep researchers use [polysomnography (PSG)](https://en.wikipedia.org/wiki/Polysomnography) to characterize sleep states. PSG combines measurements of your brain (EEG), muscles (EMG), and heart (EKG) to determine which of four sleep states you are in:\n",
+    "This assignment considers the problem of classifying sleep states based on noisy heart rate sensor data, like what you might obtain from an Apple Watch. Sleep researchers use [polysomnography (PSG)](https://en.wikipedia.org/wiki/Polysomnography) to obtain ground truth sleep states. PSG combines measurements of your brain (EEG), muscles (EMG), and heart (EKG) to determine which of four sleep states you are in:\n",
     "1. _Awake_\n",
     "2. _Core Sleep_: Non-REM stages 1 and 2. Heart rate and body temperature drop. Sleep spindles, which are thought to be important for memory consolidation, seen in EEG.\n",
-    "3. _Deep Sleep_: Non-Rem stage 3. Hard to wake up, and you feel groggy if you do. Lowest heart rate.\n",
+    "3. _Deep Sleep_: Non-REM stage 3. Hard to wake up, and you feel groggy if you do. Lowest heart rate.\n",
     "4. _Rapid Eye Movement (REM) Sleep_: This is when dreaming occurs. Heart rate increases, similar to in an awake state. Not considered restful sleep. \n",
     "\n",
     "Of course, measuring EEG, EMG, and EKG while you're sleeping is a big pain. It would be great if we could predict sleep states using less invasive measures, like what you might obtain with an Apple Watch. That's the goal of this assignment!\n",
@@ -24,12 +20,11 @@
     ">\n",
     ">**Algorithm:** You will use **expectation-maximization (EM)** and the **forward-backward algorithm** to estimate the model parameters and infer the latent states.\n",
     ">\n",
-    ">**Data**: In this case, we simulated the heart rate data to look like real heart rate traces from Walch et al. (2019), but since we had control of the generative model, we could ensure a stronger relationship between sleep states and heart rate. This way, you should be able to predict sleep states with better accuracy than we were able to achieve with the actual data.\n",
+    ">**Data**: We will work with a synthetic dataset modeled after a sleep study by Walch et al (2019). We found it too difficult to make accurate predictions on their real data, so we simulated synthetic data with a stronger relationship between sleep states and heart rate. This way, you should be able to predict sleep states with better accuracy than we were able to achieve with the actual data. Though the data is synthetic, it still serves as a good exercise for learning about these models and algorithms.\n",
     "\n",
     "\n",
     "**References**\n",
-    "- Walch, O. (2019). Motion and heart rate from a wrist-worn wearable and labeled sleep from polysomnography (version 1.0.0). PhysioNet. https://doi.org/10.13026/hmhs-py35.\n",
-    "- Olivia Walch, Yitong Huang, Daniel Forger, and Cathy Goldstein. Sleep stage prediction with raw acceleration and photoplethysmography heart rate data derived from a consumer wearable device. Sleep, 2019. [link](https://academic.oup.com/sleep/article/42/12/zsz180/5549536)\n"
+    "- Walch, O. (2019). Motion and heart rate from a wrist-worn wearable and labeled sleep from polysomnography (version 1.0.0). PhysioNet. https://doi.org/10.13026/hmhs-py35.\n"
    ]
   },
   {
@@ -255,7 +250,7 @@
     "\\end{align*}\n",
     "where $\\mathbf{P}_{k} \\in \\Delta_{K-1}$ is the $k$-th row of the transition matrix.\n",
     "\n",
-    "Assume that the missing heart rate values are \"missing at random,\" so that the correspondign likelihood terms can simply be dropped from the joint probability above. That is, replace $\\mathrm{N}(x_{i, t} \\mid \\mu_{z_{i,t}}, \\sigma^2_{z_{i,t}})$ with $1$ for missing values.\n"
+    "Assume that the missing heart rate values are \"missing at random,\" so that the corresponding likelihood terms can simply be dropped from the joint probability above. That is, replace $\\mathrm{N}(x_{i, t} \\mid \\mu_{z_{i,t}}, \\sigma^2_{z_{i,t}})$ with $1$ for missing values.\n"
    ]
   },
   {
