--- a/references.bib
+++ b/references.bib
@@ -122,3 +122,51 @@
   year={2006},
   publisher={Springer},
 }
+
+@article{kingma2019introduction,
+  title={An introduction to variational autoencoders},
+  author={Kingma, Diederik P and Welling, Max},
+  journal={Foundations and Trends{\textregistered} in Machine Learning},
+  volume={12},
+  number={4},
+  pages={307--392},
+  year={2019},
+  publisher={Now Publishers, Inc.}
+}
+
+@book{goodfellow2016deep,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
+
+@article{turner2023introduction,
+  title={An Introduction to Transformers},
+  author={Turner, Richard E},
+  journal={arXiv preprint arXiv:2304.10557},
+  year={2023}
+}
+
+@inproceedings{smith2023simplified,
+title={Simplified State Space Layers for Sequence Modeling},
+author={Jimmy T.H. Smith and Andrew Warrington and Scott Linderman},
+booktitle={The Eleventh International Conference on Learning Representations },
+year={2023},
+url={https://openreview.net/forum?id=Ai8Hw3AXqks}
+}
+
+@article{gu2023mamba,
+  title={Mamba: Linear-time sequence modeling with selective state spaces},
+  author={Gu, Albert and Dao, Tri},
+  journal={arXiv preprint arXiv:2312.00752},
+  year={2023}
+}
+
+@article{turner2024denoising,
+  title={Denoising Diffusion Probabilistic Models in Six Simple Steps},
+  author={Turner, Richard E and Diaconu, Cristiana-Diana and Markou, Stratis and Shysheya, Aliaksandra and Foong, Andrew YK and Mlodozeniec, Bruno},
+  journal={arXiv preprint arXiv:2402.04384},
+  year={2024}
+}
