--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -1013,7 +1013,7 @@
       "source": [
         "##### Question 1.3.2.1\n",
         "\n",
-        "In the limiting case where $U_q$ and $U_k$ are all zeros, and $U_v = I_{D}$, what does $(U_q, U_k, V)$ attention simplify to?"
+        "In the limiting case where $U_q$ and $U_k$ are all zeros, and $V = I_{D}$, what does $(U_q, U_k, V)$ attention simplify to?"
       ]
     },
     {
@@ -1157,9 +1157,9 @@
         "          loss: scalar, negative log likelihood of target given context\n",
         "        \"\"\"\n",
         "        B, T = token_ids.shape # (batch size, length)\n",
-        "        tok_emb = self.token_embedding_table(token_ids) # (B,T,K)\n",
-        "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # (T,K)\n",
-        "        x = tok_emb + pos_emb # (B,T,K)\n",
+        "        tok_emb = self.token_embedding_table(token_ids) # (B,T,D)\n",
+        "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # (T,D)\n",
+        "        x = tok_emb + pos_emb # (B,T,D)\n",
         "        x = self.atten_head(x) # (B,T,D)\n",
         "        logits = self.lm_head(x) # (B,T,V)\n",
         "\n",
