--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -137,6 +137,7 @@
       },
       "outputs": [],
       "source": [
+        "%%capture\n",
         "tokenizer = AutoTokenizer.from_pretrained('microsoft/CodeBERT-base')"
       ]
     },
@@ -1190,6 +1191,7 @@
       },
       "source": [
         "Train your new `SingleHeadedAttentionLM` for `SMALL_ITERS` training iterations and plot the loss curve.\n",
+        "The `head_size` shouldn't matter too much, we just use the `embedding_size`.\n",
         "Do you seen an improvement compared to your `BigramLanguageModel`? Discuss.\n",
         "\n",
         "Note: you may want to modify the learning rate. Training for `SMALL_ITERS` with a learning rate of `6e-4`, we can get to a loss of around 3.3 in around 4 min of training."
@@ -1203,7 +1205,35 @@
       },
       "outputs": [],
       "source": [
-        "# your code here"
+        "embed_size = 384\n",
+        "sha_model = SingleHeadedAttentionLM(vocab_size, context_window_size, embed_size, embed_size)\n",
+        "sham = sha_model.to(device)\n",
+        "learning_rate = 6e-4\n",
+        "optimizer = torch.optim.AdamW(sha_model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "eval_interval = 500\n",
+        "\n",
+        "loss_list = []\n",
+        "\n",
+        "for it in tqdm(range(SMALL_ITERS)):\n",
+        "\n",
+        "    # every once in a while evaluate the loss on train and val sets\n",
+        "    if it % eval_interval == 0 or it == SMALL_ITERS - 1:\n",
+        "        print(f\"iteration {it}\")\n",
+        "        losses = estimate_loss(sham, eval_iters, context_window_size, device)\n",
+        "        print(\n",
+        "            f\"step {it}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\"\n",
+        "        )\n",
+        "\n",
+        "    # sample a batch of data\n",
+        "    xb, yb = get_batch(\"train\", context_window_size, device)\n",
+        "\n",
+        "    # evaluate the loss\n",
+        "    logits, loss = sham(xb, yb)\n",
+        "    loss_list.append(loss.detach().item())\n",
+        "    optimizer.zero_grad(set_to_none=True)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()"
       ]
     },
     {
@@ -1670,7 +1700,7 @@
         "\n",
         "You will generate two PDFs: one from parts 0 and 1, which involves completing this colab to create a transformer baseline; and one from the mini-project in part 2, which will be your write-up of no longer than 4 pages.\n",
         "\n",
-        "**Combine the two PDFs into a single PDF and submit on gradescope. Tag your PDF correclty.**\n",
+        "**Combine the two PDFs into a single PDF and submit on gradescope. Tag your PDF correctly.**\n",
         "\n",
         "If you work in a group of two, submit one assignment on gradescope. If you complete the assignment individually, submit as usual."
       ]
