--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -499,7 +499,9 @@
         "1. Framing language modeling as next token prediction, and next token prediction as multiclass logistic regression\n",
         "2. Embedding discrete tokens in continuous latent spaces (word embeddings)\n",
         "3. Use the attention mechanism to move beyond Markovian models for sequences (we of course pay for this greater expressivity with increased compute, which is made possible in part by using matrix multiplications on acccelerated hardware like GPUs. Reducing the compute burden while maintaining the expressivity needed for good sequence modeling is an active area of research).\n",
-        "4. Combining attention with deep learning in the Transformer architecture."
+        "4. Combining attention with deep learning in the Transformer architecture.\n",
+        "\n",
+        "For various architectures that you have to train, we provide approximate training times and training loss scores for your reference. They are really just for reference so don't read too much into them, but we are providing them as a warning mechanism in case something is going seriously wrong."
       ]
     },
     {
@@ -1194,7 +1196,7 @@
         "The `head_size` shouldn't matter too much, we just use the `embedding_size`.\n",
         "Do you seen an improvement compared to your `BigramLanguageModel`? Discuss.\n",
         "\n",
-        "Note: you may want to modify the learning rate. Training for `SMALL_ITERS` with a learning rate of `6e-4`, we can get to a loss of around 3.3 in around 4 min of training."
+        "Note: you may want to modify the learning rate. Training for `SMALL_ITERS` with a learning rate of `6e-4`, we can get to a train loss of around 3.4 in around 4 min of training."
       ]
     },
     {
@@ -1210,8 +1212,6 @@
         "sham = sha_model.to(device)\n",
         "learning_rate = 6e-4\n",
         "optimizer = torch.optim.AdamW(sha_model.parameters(), lr=learning_rate)\n",
-        "\n",
-        "eval_interval = 500\n",
         "\n",
         "loss_list = []\n",
         "\n",
@@ -1298,7 +1298,7 @@
         "\n",
         "Fill in the code below to create a language model that outputs its logits for next token prediction using multi-headed attention. Train your model for `SMALL_ITERS` training iterations. Compare the results with the single-headed attention model. Do you see an improvement?\n",
         "\n",
-        "We get to a train loss of around 3 in around 5 mins of training."
+        "We get to a train loss of around 2.75 in around 5 mins of training."
       ]
     },
     {
@@ -1548,7 +1548,7 @@
       "source": [
         "Train your `TransformerLM` for `LARGE_ITERS` iterations and plot the loss curve. You may want to change the learning rate.\n",
         "\n",
-        "We used a learning rate of `1e-4` and got to a final train loss of around 2.3 in around 25 mins of training."
+        "We used a learning rate of `1e-4` and got to a final train loss of around 2.4 in around 30 mins of training."
       ]
     },
     {
