--- a/assignments/hw4/hw4.ipynb
+++ b/assignments/hw4/hw4.ipynb
@@ -753,7 +753,7 @@
       "source": [
         "#### Question 1.1.8: Evaluating the initialization.\n",
         "\n",
-        "Evaluate the loss of your untrained bigram model on a batch of data. Does this loss make sense in the context of your answer to Question 1.1.6? Discuss."
+        "Evaluate the loss of your untrained bigram model on a batch of data. Make sure the loss (negative log likelihood) is per-token (i.e. you may need to average over both sequence length and batch). Does this loss make sense in the context of your answer to Question 1.1.6? Discuss."
       ]
     },
     {
@@ -945,9 +945,9 @@
       "source": [
         "#### Question 1.3.1: Averaging over word embeddings\n",
         "\n",
-        "One simple way to pool information from previous tokens would simply be to average the embeddings of all the previous tokens!\n",
+        "One simple way to pool information would simply be to average the embeddings!\n",
         "\n",
-        "Your TODO: Add comments to the the code snippet below. Write a description here explaining why the code is mathematically equivalent to averaging the embeddings of previous tokens"
+        "Your TODO: Add comments to the the code snippet below. Write a description here explaining why the code is mathematically equivalent to averaging the embeddings of the previous tokens and the current token."
       ]
     },
     {
