--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -21,7 +21,7 @@
         ">\n",
         ">**Model:** You will begin by implementing a baseline using attention and transformers. But, for the mini-project, you will be free to use any model (HMMs, RNNs, transformers, state space layers, diffusion models etc.) that you would like!\n",
         ">\n",
-        ">**Algorithm:** mini-batched stochatic gradient descent / whatever you'd like! We will be using deep learning models in at least the first half of the assignment, so be sure to **use the GPU on colab** (make sure you switch to GPU in the \"Runtime\" tab above).\n",
+        ">**Algorithm:** mini-batched stochatic gradient descent / whatever you'd like! We will be using deep learning models in at least the first half of the assignment. When you actually go into \"production\" you should be sure to **use the GPU on colab** (make sure you switch to GPU in the \"Runtime\" tab above). However, you have limited colab gpu units for free, so when you are \"developing,\" you may wish to run smaller models with less data for fewer iterations just to get the bugs out / make sure you pipeline is working (see the \"prototyping\" exercise in HW 0 for more discussion).\n",
         ">\n",
         ">**Data**: A large corpus of python code from [the Stack](https://huggingface.co/datasets/bigcode/the-stack-dedup). We have taken a dataset of around 4 million tokens from the stack and stored in a csv file for you for easy access."
       ]
@@ -151,6 +151,19 @@
       "source": [
         "# Load the concatenated data\n",
         "raw_data = pd.read_csv(\"https://raw.githubusercontent.com/slinderman/stats305b/winter2024/assignments/hw4/python_corpus_4M.csv\", header=None)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Note: if you run the below cell, you might get something like the following warning\n",
+        "\n",
+        "> Token indices sequence length is longer than the specified maximum sequence length for this model. Running this sequence through the model will result in indexing errors\n",
+        "\n",
+        "You can safely ignore this error for the purpose of the assignment (we did in our solutions).\n",
+        "\n",
+        "But, if  you can figure out this error, or find a fix, let the teaching staff know, and we will give you extra credit."
       ]
     },
     {
@@ -686,7 +699,7 @@
         "\n",
         "Your TODOs:\n",
         "  * if the `forward` method is provided a target, the loss should be the negative log likelihood of the target (given the context)\n",
-        "  * `generate` should take in (batched) contexts and a number of new tokens to generate, and then generate text from your model.\n"
+        "  * `generate` should take in (batched) contexts and a number of new tokens to generate, and then generate text autoregressively from your model. Note that in autoregressive text generation, you iteratively append the tokens you generate to your context.\n"
       ]
     },
     {
@@ -844,6 +857,17 @@
         "_your answer here_\n",
         "\n",
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Note that these models can take up a lot of memory on the GPU. As you go through this assignment, you may want to free the models after you train them using code along the lines of \n",
+        "```\n",
+        "bm.to('cpu')\n",
+        "torch.cuda.empty_cache()\n",
+        "```"
       ]
     },
     {
@@ -1380,7 +1404,7 @@
       "source": [
         "# run this cell to initialize this deep learning module that you should use in the code your write later\n",
         "# you don't need to edit this layer\n",
-        "class FeedFoward(nn.Module):\n",
+        "class FeedForward(nn.Module):\n",
         "    \"\"\" a simple linear layer followed by a non-linearity\n",
         "        Given to you, you don't need to write any code here!\n",
         "    \"\"\"\n",
