--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -598,7 +598,7 @@
       "source": [
         "#### Question 1.1.3\n",
         "\n",
-        "Say I have a string of three tokens with ids $(7, 3, 6)$. If I use the bigram model as a generative model for language, given this information, what is distribution of the fourth token?"
+        "Say I have a string of three tokens with ids $(7, 3, 6)$. If I use the bigram model as a generative model for language, given this information, what is distribution of the fourth token? Write your answer in terms of the matrix $A$ we defined in 1.1"
       ]
     },
     {
@@ -1464,7 +1464,7 @@
         "        Uses multi-headed attention\n",
         "    \"\"\"\n",
         "\n",
-        "    def __init__(self, vocab_size, block_size, embed_size=384, num_heads=6):\n",
+        "    def __init__(self, vocab_size, context_window_size, embed_size=384, num_heads=6):\n",
         "        super().__init__()\n",
         "        self.ln1 = nn.LayerNorm(embed_size)\n",
         "        self.ln2 = nn.LayerNorm(embed_size)\n",
