adding lecture notes on random graph models

--- a/references.bib
+++ b/references.bib
@@ -170,3 +170,70 @@ url={https://openreview.net/forum?id=Ai8Hw3AXqks}
   journal={arXiv preprint arXiv:2402.04384},
   year={2024}
 }
+
+@article{hoff2002latent,
+  title={Latent space approaches to social network analysis},
+  author={Hoff, Peter D and Raftery, Adrian E and Handcock, Mark S},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={460},
+  pages={1090--1098},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{hoff2007modeling,
+  title={Modeling homophily and stochastic equivalence in symmetric relational data},
+  author={Hoff, Peter},
+  journal={Advances in neural information processing systems},
+  volume={20},
+  year={2007}
+}
+
+
+@article{aldous1981representations,
+  title={Representations for partially exchangeable arrays of random variables},
+  author={Aldous, David J},
+  journal={Journal of Multivariate Analysis},
+  volume={11},
+  number={4},
+  pages={581--598},
+  year={1981},
+  publisher={Elsevier}
+}
+
+@techreport{hoover1979relations,
+title={Relations on Probability Spaces and Arrays of Random Variables.},
+author={Hoover, Douglas},
+institution={Institute for Advanced Study, Princeton, NJ},
+year={1979}
+}
+
+@article{orbanz2013bayesian,
+  title={Bayesian Models of Graphs, Arrays, and Other Exchangeable Random Structures},
+  author={Orbanz, P and Roy, DM},
+  journal={arXiv},
+  volume={37},
+  number={02},
+  pages={1--25},
+  year={2013}
+}
+
+@article{bloem2018random,
+  title={Random-walk models of network formation and sequential {M}onte {C}arlo methods for graphs},
+  author={Bloem-Reddy, Benjamin and Orbanz, Peter},
+  journal={Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume={80},
+  number={5},
+  pages={871--898},
+  year={2018},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{tieleman2008training,
+  title={Training restricted {B}oltzmann machines using approximations to the likelihood gradient},
+  author={Tieleman, Tijmen},
+  booktitle={Proceedings of the 25th international conference on Machine learning},
+  pages={1064--1071},
+  year={2008}
+}
