deploy: b04cc70577fda25112d10a6ad488aec6abf2aa23

--- a/_sources/assignments/hw4/hw4.ipynb
+++ b/_sources/assignments/hw4/hw4.ipynb
@@ -996,17 +996,17 @@
       "outputs": [],
       "source": [
         "# average word embedding via matrix multiply and softmax\n",
-        "batch_size = 4              # B\n",
-        "context_window_size = 8     # T\n",
-        "embed_size = 2              # D\n",
+        "small_batch_size = 4              # B\n",
+        "small_context_window_size = 8     # T\n",
+        "small_embed_size = 2              # D\n",
         "\n",
         "# make \"synthetic\" word embeddings (for illustration purposes only)\n",
-        "X = torch.randn(batch_size, context_window_size, embed_size)\n",
+        "X = torch.randn(small_batch_size, small_context_window_size, small_embed_size)\n",
         "\n",
         "# TODO: comment the code below\n",
         "print(X.shape)\n",
-        "tril = torch.tril(torch.ones(context_window_size, context_window_size))\n",
-        "attn_weights = torch.zeros((context_window_size, context_window_size))\n",
+        "tril = torch.tril(torch.ones(small_context_window_size, small_context_window_size))\n",
+        "attn_weights = torch.zeros((small_context_window_size, small_context_window_size))\n",
         "attn_weights = attn_weights.masked_fill(tril == 0, float('-inf'))\n",
         "attn_weights = F.softmax(attn_weights, dim=-1)\n",
         "avgDmbds = attn_weights @ X\n",
