fix typo in multi head attention:

--- a/assignments/hw4/hw4.ipynb
+++ b/assignments/hw4/hw4.ipynb
@@ -1302,7 +1302,14 @@
         "class MultiHeadAttention(nn.Module):\n",
         "    \"\"\" multiple heads of self-attention in parallel \"\"\"\n",
         "\n",
-        "    def __init__(self, vocab_size, context_window_size, num_heads, head_size, embed_size=384):\n",
+        "    def __init__(self, context_window_size, num_heads, head_size, embed_size=384):\n",
+        "        \"\"\"\n",
+        "        Args:\n",
+        "            context_window_size: int, number of tokens considered in the past for attention (T)\n",
+        "            num_heads: int, number of heads (H)\n",
+        "            head_size: int, size of the head embedding dimension\n",
+        "            embed_size: int, size of the token embedding dimension\n",
+        "        \"\"\"\n",
         "        super().__init__()\n",
         "        # TODO, your code below\n",
         "        self.heads = nn.ModuleList(...)\n",
