--- a/references.bib
+++ b/references.bib
@@ -154,7 +154,6 @@ title={Simplified State Space Layers for Sequence Modeling},
 author={Jimmy T.H. Smith and Andrew Warrington and Scott Linderman},
 booktitle={The Eleventh International Conference on Learning Representations },
 year={2023},
-url={https://openreview.net/forum?id=Ai8Hw3AXqks}
 }
 
 @article{gu2023mamba,
@@ -269,4 +268,13 @@ year={1979}
   pages={2256--2265},
   year={2015},
   organization={PMLR}
+}
+
+@article{campbell2022continuous,
+  title={A continuous time framework for discrete denoising models},
+  author={Campbell, Andrew and Benton, Joe and De Bortoli, Valentin and Rainforth, Thomas and Deligiannidis, George and Doucet, Arnaud},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={28266--28279},
+  year={2022}
 }
